1.7.1 Retour lbb, améliorations candidatures (#446)
